# origin

./: .gitignore
Lesson 1/task1/: urok1.cpp  urok1.sln  urok1.vcxproj  urok1.vcxproj.filters
Lesson10/task_1/: main.cpp
Lesson10/task_2/: CMakeLists.txt  equilateral_triangle.h  figure.cpp  isosceles_triangle.cpp  parallelogram.cpp  rectangl.cpp  rhomb.cpp  rhomb.h  right_triangle.cpp  square.cpp  task_3.cpp  triangle.cpp
Lesson11/task_3/: CMakeLists.txt  Leaver.h  task_1.cpp
Lesson2/task_1/: task1.cpp
Lesson2/task_2/: task_2.cpp  task_2.sln  task_2.vcxproj
Lesson2/task_3/: task_3.cpp  task_3.sln  task_3.vcxproj
Lesson3/task_1/: task_1.cpp  task_1.sln  task_1.vcxproj
Lesson3/task_2/: task_2.cpp  task_2.sln  task_2.vcxproj
Lesson4/task_1/: task_1.cpp  task_1.sln  task_1.vcxproj
Lesson4/task_2/: task_2.cpp  task_2.sln  task_2.vcxproj
Lesson5/task_1/: task_1.cpp  task_1.sln  task_1.vcxproj
Lesson5/task_2/: task_2.vcxproj
Lesson5/task_3/: task_3.cpp  task_3.sln  task_3.vcxproj
Lesson6/task_1/: math.cpp  math.h  task_1.cpp  task_1.sln  task_1.vcxproj  task_1.vcxproj.filters
Lesson6/task_2/: Counter.cpp  Counter.h  task_2.cpp  task_2.sln  task_2.vcxproj  task_2.vcxproj.filters
Lesson6/task_3/: equilateral_triangle.cpp  figure.h  (+10 more)
coursework2/coursework2v2/: CMakeLists.txt  coursework2.cpp
coursework2/coursework2v2/LibraryTransport/: Boots.cpp  Boots.h  Broom.cpp  Broom.h  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  FastCamel.cpp  FastCamel.h  FlyingCarpet.cpp  FlyingCarpet.h  Transport.cpp  Transport.h  race.cpp  race.h
(+222 files in other folders)
